@@ -22,7 +22,14 @@ delete $ENV{MAKEFLAGS};
 system($^X, "Makefile.PL", @args) == 0 or die $!;
 system("make 2>&1") == 0 or die $!;
 
-use lib ("blib/arch/auto/SymbolTest/.libs", "blib/lib");
+use lib (
+	# For shared objects when built with uninstalled xapian-core (libtool):
+	"blib/arch/auto/SymbolTest/.libs",
+	# For shared objects when built with installed xapian-core (no libtool):
+	"blib/arch/auto/SymbolTest",
+	# For .pm files:
+	"blib/lib"
+    );
 
 use_ok("SymbolTest");
 eval { SymbolTest::throw_from_libxapian() };
